# herb-lytics

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  Makefile  README.md  index.html  package.json  rustfmt.toml  tailwind.css  vercel.json
.github/workflows/: ci.yml  codeql.yml
src/: app.rs  lib.rs
src/components/: dashboard_layout.rs  herb_chart.rs  herb_table.rs  mod.rs  summary_cards.rs
src/core/: api.rs  config.rs  error.rs  mod.rs  time.rs  types.rs  utils.rs
src/stores/: dashboard.rs  mod.rs
src/views/: dashboard_view.rs  mod.rs
