[package]
name = "herb_lytics"
version = "1.1.17"
edition = "2024"
rust-version = "1.88"
description = "Herbal purchase value dashboard (Rust + Leptos WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.8", default-features = false }

# HTTP / API (Google Apps Script)
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }
gloo-storage = { version = "0.4", default-features = false }
gloo-utils = { version = "0.2", default-features = false, features = ["serde"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

# Time (NOTE the wasm-specific feature)
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std", "wasmbind"] }

# Logging / panics
console_log = { version = "1", default-features = false }
console_error_panic_hook = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }

# Errors
thiserror = { version = "2", default-features = false }

# JS interop
wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
incremental = true

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Leptos view! macros are noisy — relax the pedantic UI lints:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
future_not_send = "allow"
